# bot_core

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  utils.rs
src/core/: dialog.rs  logic.rs  memory.rs  mod.rs  planner.rs
src/integration/: cli.rs
src/integration/ffi/: ios.rs
src/integration/jni/: android.rs
src/integration/telegram/: bot.rs  handler.rs
src/integration/wasm/: web.rs
src/knowledge/: arxiv.rs  github.rs  mod.rs  web.rs  wikipedia.rs
src/language/: detect.rs  mod.rs  normalize.rs  translator.rs
src/skills/: code.rs  math.rs  mod.rs  weather.rs
src/storage/: db.rs  file.rs
