[package]
name = "bot_core"
version = "0.1.0"
edition = "2021"
description = "Умный кроссплатформенный чат-бот на Rust"
authors = ["Dmitrij Fomin <you@example.com>"]

[dependencies]
# Асинхронность
tokio = { version = "1", features = ["full"] }
quick-xml = { version = "0.31", features = ["serialize"] }
# Telegram Bot
teloxide = { version = "0.15.0", features = ["macros"] }

# CLI и системные утилиты
chrono = "0.4"
dotenv = "0.15"
libc = "0.2"

# Парсинг и работа с HTTP (Wikipedia, GitHub, Web)
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
scraper = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Язык и NLP
whatlang = "0.16.4"
rust-stemmers = "1.2"
unicode-normalization = "0.1"
regex = "1"
meval = "0.2"
urlencoding = "2.1"
# WebAssembly
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# JNI для Android
jni = "0.21"

# База данных (Neon) - ДОБАВЛЕНА TLS ПОДДЕРЖКА
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "tls-native-tls"] }

# Логирование
log = "0.4"
env_logger = "0.11.8"

[lib]
name = "bot_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[profile.release]
opt-level = "z"
lto = true

